delete phpExcell documentation and examples; fix tag/categories wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,7 +773,7 @@ div.results {
 	padding:2px 6px;
 	font-weight: 500;
 	margin-right: 6px;
-	white-space: nowrap;
+	white-space: pre-wrap;
 	border: none;
 	line-height:1.3em;
 	display: inline;
